Move initialize metrics until after data dir was created